force-app/main/default/objects/Order_Item_WebCommercal__c/Order_Item_WebCommercal__c.object-meta.xml
<CustomObject>
    <label>Order Item Web Commercal</label>
    <nameField>
        <label>Order Item WebCommercal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderItem_Web_Commercal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>