force-app/main/default/objects/Order_Item_WebCommercal__c/fields/color_code__c.field-meta.xml
<CustomField>
    <fullName>color_code__c</fullName>
    <label>color code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>