force-app/main/default/objects/Order_Item_WebCommercal__c/fields/Order_WebCommercal__c.field-meta.xml
<CustomField>
    <fullName>Order_WebCommercal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order WebCommercal</label>
    <referenceTo>Order_WebCommercal__c</referenceTo>
    <relationshipLabel>OrderItem_Web_Commercal</relationshipLabel>
    <relationshipName>OrderItem_Web_Commercal</relationshipName>
    <type>Lookup</type>
</CustomField>