force-app/main/default/objects/Order_Item_WebCommercal__c/fields/sale_off__c.field-meta.xml
<CustomField>
    <fullName>sale_off__c</fullName>
    <label>sale off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>