force-app/main/default/objects/Order_Item_WebCommercal__c/fields/size_code__c.field-meta.xml
<CustomField>
    <fullName>size_code__c</fullName>
    <label>size code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>